--- a/.github/workflows/build_and_deploy_to_itch.yml
+++ b/.github/workflows/build_and_deploy_to_itch.yml
@@ -23,6 +23,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: install godot
+        run: |
+          sudo apt-get update
+          sudo apt-get install godot
