--- a/.github/workflows/build_and_deploy_to_itch.yml
+++ b/.github/workflows/build_and_deploy_to_itch.yml
@@ -43,3 +43,11 @@ jobs:
     
       - name: 🔬 Verify Butler Setup
         run: butler -V
+
+      # Export the Godot project
+      - name: Export Godot Project
+        run: godot --export-release Web 'exports/index.html'
+
+      - name: Temporary verify godot export
+        run: ls exports
+        
