attempt to properly access github secret

--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -9,6 +9,7 @@ env:
   PROJECT_PATH: '.'
   ITCH_USERNAME: jcarnaxide
   ITCH_GAME_ID: platformer-with-brackeys
+  BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
 
 jobs:
   export-web:
@@ -38,7 +39,7 @@ jobs:
       - name: Deploy to Itch.io 🚀
         uses: KikimoraGames/itch-publish@v0.0.3
         with:
-            butlerApiKey: $secrets.BUTLER_API_KEY
+            butlerApiKey: $BUTLER_API_KEY
             gameData: ./build/web/
             itchUsername: $ITCH_USERNAME
             itchGameId: $ITCH_GAME_ID
