--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy to Itch.io 🚀
         uses: KikimoraGames/itch-publish@v0.0.3
         with:
-            butlerApiKey: $BUTLER_API_KEY
+            butlerApiKey: ${BUTLER_API_KEY}
             gameData: ./build/web/
             itchUsername: $ITCH_USERNAME
             itchGameId: $ITCH_GAME_ID
