--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -1,7 +1,7 @@
 name: "godot-ci export"
 on:
     push:
-        branches: [ "test" ]
+        branches: [ "main" ]
 
 env:
   GODOT_VERSION: 4.2.2
@@ -30,11 +30,6 @@ jobs:
           mkdir -v -p build/web
           cd $PROJECT_PATH
           godot --headless --verbose --export-release "Web" ./build/web/index.html
-    #   - name: Upload Artifact
-    #     uses: actions/upload-artifact@v1
-    #     with:
-    #       name: web
-    #       path: build/web
       - name: Deploy to Itch.io 🚀
         uses: manleydev/butler-publish-itchio-action@master
         env:
